--- a/memorial/memorial.css
+++ b/memorial/memorial.css
@@ -6,14 +6,14 @@
 html {
     font-family: sans-serif;
     font-size: 10px;
-    background: rgb(240,240,240);
+    background: rgb(240, 240, 240);
     height: 300px;
     margin: 0;
 }
 
 body {
     width: 300px;
-    background: rgb(240,240,240);
+    background: rgb(240, 240, 240);
     margin: 0 auto;
     padding: 2px;
     height: inherit;
@@ -23,12 +23,12 @@ body {
     overflow: auto;
     width: 100%;
     height: 290px;
-    background: rgb(240,240,240);
+    background: rgb(240, 240, 240);
 }
 
 /* form control styling */
 button {
-    border: 1px solid rgb(218,218,218);
+    border: 1px solid rgb(218, 218, 218);
     padding: 4px;
     background: white;
     border-radius: 3px;
@@ -36,7 +36,7 @@ button {
 
 button {
     background: #ccc;
-    box-shadow: inset -2px -2px 1px rgba(0,0,0,0.2);
+    box-shadow: inset -2px -2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.1s all;
 }
 
@@ -45,7 +45,7 @@ button:hover, button:focus {
 }
 
 button:active {
-    box-shadow: inset -2px -2px 1px rgba(0,0,0,0.05);
+    box-shadow: inset -2px -2px 1px rgba(0, 0, 0, 0.05);
 }
 
 /* Typography */
@@ -59,7 +59,6 @@ p {
 }
 
 /* Memorial display box(es) */
-
 .snap_memorial {
     padding: 2px;
 }
